@@ -15,6 +15,8 @@
 // You should have received a copy of the GNU Lesser General Public License
 // along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
 
+#include "common.hh"
+
 #include <iostream>
 #include <boost/format.hpp>
 #include <boost/mpl/vector.hpp>
@@ -22,8 +24,6 @@
 
 #include <roboptim/core/numeric-linear-function.hh>
 #include <roboptim/core/solver-factory.hh>
-
-#include "common.hh"
 
 using namespace roboptim;
 
