@@ -15,6 +15,8 @@
 // You should have received a copy of the GNU Lesser General Public License
 // along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
 
+#include "common.hh"
+
 #include <iostream>
 #include <boost/numeric/ublas/io.hpp>
 #include <boost/variant/detail/variant_io.hpp>
